Cверстана шапка и навигация сайта без адаптации и стилизации элементов при наведении

--- a/html/index.html
+++ b/html/index.html
@@ -6,11 +6,115 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/css/main.css">
-    <title>Document</title>
+    <title>Интернет магазин 12 стульев</title>
 </head>
 
 <body>
-   
+    <header class="header">
+        <a class="logo-section" href="./index.html">
+            <img class="logo-section__img" src="../img/companyLogo/logo_header.png" alt="Логотип">
+        </a>
+        <div class="contact-phone">
+            <svg class="contact-phone__icon" xmlns="http://www.w3.org/2000/svg" width="13" height="13">
+                <path fill-rule="evenodd" fill="#A1A8BD" d="M.722 0C.289 0 0 .289 0 .722 0 7.511 5.489 13 12.278 13c.433 0 .722-.289.722-.723V9.75c0-.434-.289-.722-.722-.722-.867 0-1.806-.145-2.601-.434-.288-.072-.505 0-.722.217L7.367 10.4C5.344 9.388 3.683 7.655 2.6 5.633l1.589-1.589c.216-.216.289-.506.216-.722-.289-.867-.433-1.733-.433-2.6C3.972.289 3.683 0 3.25 0"/>
+            </svg>
+            <a class="contact-phone__number" href="tel:+74996539900">
+                +7(499)653-9-900
+            </a>
+        </div>
+        <a href="#" class="check-order-status">
+            <span class="check-order-status__text">
+                Проверить статус заказа
+            </span>
+              <svg class="check-order-status__icon" xmlns="http://www.w3.org/2000/svg" width="5" height="7" fill-rule="evenodd" fill="#142558">
+                <path d="M5.015 3.445L1.784.447 1.306.002.708.447l-.718.777 2.393 2.221L-.01 5.777l.718.667.598.555.478-.555 3.231-2.999z"/>
+            </svg> 
+        </a>
+
+       <!--<a href="http://gmail@gmail.com" class="contact">
+            <svg class="contact_img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" version="1.0" fit="" height="100%" width="100%" preserveAspectRatio="xMidYMid meet" style="pointer-events: none; display: inline-block;"><path d="M1.574 5.286l7.5 4.03c.252.134.578.198.906.198.328 0 .654-.064.906-.2l7.5-4.028c.49-.263.95-1.286.054-1.286H1.52c-.896 0-.434 1.023.054 1.286zm17.04 2.203c-.556.288-7.388 3.848-7.728 4.026s-.578.2-.906.2-.566-.022-.906-.2-7.133-3.74-7.688-4.028c-.39-.204-.386.035-.386.22V15c0 .42.566 1 1 1h16c.434 0 1-.58 1-1V7.708s.004-.423-.387-.22z"></path></svg>
+            <span class="contact_txt">work.of.future@gmail.com</span>
+        </a>--> 
+
+        <a href="#" class="shopping-cart ">
+            <svg class="shopping-cart__icon" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" fill="#A1A8BD" width="18" height="17">
+                <path d="M18 4.052L17 7.04c-.37.838-.895 1.992-2 1.992H5.36l.118.996H18l-1 1.991H4.352l-.644.075L2.522 2.061H.999A.997.997 0 0 1 0 1.066C0 .515.352.008.904.008l3.387-.014.254 2.15A1.2 1.2 0 0 1 5 2.061h12c1.105 0 1 .891 1 1.991zM6 13.015c1.105 0 2 .891 2 1.992a1.996 1.996 0 0 1-2 1.991c-1.105 0-2-.892-2-1.991 0-1.101.895-1.992 2-1.992zm8 0c1.105 0 2 .891 2 1.992a1.996 1.996 0 0 1-2 1.991c-1.105 0-2-.892-2-1.991 0-1.101.895-1.992 2-1.992z"/>
+            </svg>
+            <span class="shopping-cart__text">
+                Корзина
+            </span>
+            <span class="shopping-cart__number-goods">
+                0
+            </span>
+        </a>
+        <a class="login-button" href="#">
+            <svg class="login-button__icon" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" fill="#A1A8BD" width="12" height="12">
+                <path  d="M0 12v-.75c0-2.625 2.475-4.5 6-4.5s6 1.875 6 4.5V12H0zm6-6C4.35 6 3 4.65 3 3s1.35-3 3-3 3 1.35 3 3-1.35 3-3 3z"/>
+            </svg>
+            <span class="login-button__text">
+                Вход
+            </span>
+        </a>   
+    </header>
+    <nav class="nav-bar">
+        <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#" class="nav__link">стулья и кресла</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">кровати и матрасы</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">шкафы и комоды</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">мебель для кухни</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">товары для дома</a>
+            </li>
+        </ul>
+    
+        <form class="search-form">
+          <input type="text" placeholder="Поиск по товарам" class="search-form__input">
+          <button class="button search-form__button">
+              <svg class="button__serch-icon" xmlns="http://www.w3.org/2000/svg" width="17.348" height="17.348">
+                  <path fill-rule="evenodd" fill="#343E5C" d="M12.614 12.61c-.501.5-1.313.5-1.813 0L8.158 9.966c-2.071 1.256-4.799 1.005-6.587-.784a5.383 5.383 0 0 1 0-7.614 5.381 5.381 0 0 1 7.614 0c1.788 1.789 2.04 4.516.786 6.586l2.643 2.645c.5.498.5 1.309 0 1.811zM7.735 3.017a3.335 3.335 0 0 0-4.714 0 3.335 3.335 0 0 0 0 4.714 3.331 3.331 0 0 0 4.714 0 3.335 3.335 0 0 0 0-4.714z"/>
+              </svg>    
+          </button>
+        </form>
+    </nav>
 </body>
 
 </html>
+
+<!--
+    телефон
+<svg xmlns="http://www.w3.org/2000/svg" width="17.348" height="17.348">
+  <path fill-rule="evenodd" fill="#A1A8BD" d="M.722 0C.289 0 0 .289 0 .722 0 7.511 5.489 13 12.278 13c.433 0 .722-.289.722-.723V9.75c0-.434-.289-.722-.722-.722-.867 0-1.806-.145-2.601-.434-.288-.072-.505 0-.722.217L7.367 10.4C5.344 9.388 3.683 7.655 2.6 5.633l1.589-1.589c.216-.216.289-.506.216-.722-.289-.867-.433-1.733-.433-2.6C3.972.289 3.683 0 3.25 0"/>
+</svg>
+
+стрелка вправо
+<svg xmlns="http://www.w3.org/2000/svg" width="6.652" height="9.3354">
+  <path fill-rule="evenodd" fill="#142558" d="M5.015 3.445L1.784.447 1.306.002.708.447l-.718.777 2.393 2.221L-.01 5.777l.718.667.598.555.478-.555 3.231-2.999z"/>
+</svg>
+
+стрелка влево 
+<svg xmlns="http://www.w3.org/2000/svg" width="9.335" height="14.665"><path fill-rule="evenodd" fill="#3A405B" d="M2.534 5.015l3.168 3.158a1.078 1.078 0 0 1 0 1.529 1.088 1.088 0 0 1-1.534 0L.333 5.879a1.064 1.064 0 0 1-.299-.864 1.065 1.065 0 0 1 .299-.864L4.168.328a1.088 1.088 0 0 1 1.534 0 1.08 1.08 0 0 1 0 1.53L2.534 5.015z"/></svg>
+
+корзина 
+<svg xmlns="http://www.w3.org/2000/svg" width=".67cm" height=".6cm">
+<path fill-rule="evenodd" fill="#A1A8BD" d="M18 4.052L17 7.04c-.37.838-.895 1.992-2 1.992H5.36l.118.996H18l-1 1.991H4.352l-.644.075L2.522 2.061H.999A.997.997 0 0 1 0 1.066C0 .515.352.008.904.008l3.387-.014.254 2.15A1.2 1.2 0 0 1 5 2.061h12c1.105 0 1 .891 1 1.991zM6 13.015c1.105 0 2 .891 2 1.992a1.996 1.996 0 0 1-2 1.991c-1.105 0-2-.892-2-1.991 0-1.101.895-1.992 2-1.992zm8 0c1.105 0 2 .891 2 1.992a1.996 1.996 0 0 1-2 1.991c-1.105 0-2-.892-2-1.991 0-1.101.895-1.992 2-1.992z"/>
+</svg>
+
+user 
+<svg xmlns="http://www.w3.org/2000/svg" width="15.987" height="15.987">
+<path fill-rule="evenodd" fill="#A1A8BD" d="M0 12v-.75c0-2.625 2.475-4.5 6-4.5s6 1.875 6 4.5V12H0zm6-6C4.35 6 3 4.65 3 3s1.35-3 3-3 3 1.35 3 3-1.35 3-3 3z"/>
+</svg>
+
+Доставка
+<svg xmlns="http://www.w3.org/2000/svg" width="26.683" height="21.317"><path fill-rule="evenodd" opacity=".761" fill="#7E869F" d="M19 14h-2c0-1.656-1.344-3-3-3-.34 0-.661.069-.965.173-.011-.058-.035-.112-.035-.173V4a1 1 0 0 1 1-1h2c2.206 0 4 1.794 4 4v6a1 1 0 0 1-1 1zm-1-8h-3v2h3V6zm-2 8a2 2 0 1 1-4.001-.001A2 2 0 0 1 16 14zm-8 0a3.001 3.001 0 0 0-6 0H1a1 1 0 0 1-1-1V2C0 .896.897 0 2 0h8c1.103 0 2 .896 2 2v9.779c-.61.549-1 1.336-1 2.221H8zm-3-2a2 2 0 1 1-.001 4.001A2 2 0 0 1 5 12z"/></svg>
+
+поиск 
+<svg xmlns="http://www.w3.org/2000/svg" width="17.348" height="17.348"><path fill-rule="evenodd" fill="#343E5C" d="M12.614 12.61c-.501.5-1.313.5-1.813 0L8.158 9.966c-2.071 1.256-4.799 1.005-6.587-.784a5.383 5.383 0 0 1 0-7.614 5.381 5.381 0 0 1 7.614 0c1.788 1.789 2.04 4.516.786 6.586l2.643 2.645c.5.498.5 1.309 0 1.811zM7.735 3.017a3.335 3.335 0 0 0-4.714 0 3.335 3.335 0 0 0 0 4.714 3.331 3.331 0 0 0 4.714 0 3.335 3.335 0 0 0 0-4.714z"/></svg>
+-->
