сверстано поле поиска по сайту

--- a/html/index.html
+++ b/html/index.html
@@ -58,7 +58,7 @@
     </header>
     <nav class="nav-bar">
         <ul class="nav__list">
-            <li class="nav__item">
+            <li class="nav__item nav__item--active">
               <a href="#" class="nav__link">стулья и кресла</a>
             </li>
             <li class="nav__item">
@@ -77,9 +77,9 @@
     
         <form class="search-form">
           <input type="text" placeholder="Поиск по товарам" class="search-form__input">
-          <button class="button search-form__button">
-              <svg class="button__serch-icon" xmlns="http://www.w3.org/2000/svg" width="17.348" height="17.348">
-                  <path fill-rule="evenodd" fill="#343E5C" d="M12.614 12.61c-.501.5-1.313.5-1.813 0L8.158 9.966c-2.071 1.256-4.799 1.005-6.587-.784a5.383 5.383 0 0 1 0-7.614 5.381 5.381 0 0 1 7.614 0c1.788 1.789 2.04 4.516.786 6.586l2.643 2.645c.5.498.5 1.309 0 1.811zM7.735 3.017a3.335 3.335 0 0 0-4.714 0 3.335 3.335 0 0 0 0 4.714 3.331 3.331 0 0 0 4.714 0 3.335 3.335 0 0 0 0-4.714z"/>
+          <button class="button search-form__button">  
+              <svg class="button__serch-icon search-form__input--focus" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" fill="#343E5C" width="13" height="13">
+                  <path  d="M12.614 12.61c-.501.5-1.313.5-1.813 0L8.158 9.966c-2.071 1.256-4.799 1.005-6.587-.784a5.383 5.383 0 0 1 0-7.614 5.381 5.381 0 0 1 7.614 0c1.788 1.789 2.04 4.516.786 6.586l2.643 2.645c.5.498.5 1.309 0 1.811zM7.735 3.017a3.335 3.335 0 0 0-4.714 0 3.335 3.335 0 0 0 0 4.714 3.331 3.331 0 0 0 4.714 0 3.335 3.335 0 0 0 0-4.714z"/>
               </svg>    
           </button>
         </form>
