--- a/html/index.html
+++ b/html/index.html
@@ -84,6 +84,75 @@
           </button>
         </form>
     </nav>
+    <main>
+
+    </main>
+
+    <footer class="footer">
+        <div class="footer__wrap-nav-and-logo">
+            <a class="nav-bar__logo logo-section" href="./index.html">
+                <img class="logo-section__img" src="../img/companyLogo/logo_footer.png" alt="Логотип">
+            </a>
+            <nav class="footer__nav-bar">
+                <ul class="footer__nav-list">
+                    <li class="footer__nav-item">
+                        <a href="" class="footer__nav-link">стулья и кресла</a>
+                    </li>
+                    <li class="footer__nav-item">
+                        <a href="" class="footer__nav-link">кровати и матрасы</a>
+                    </li>
+                    <li class="footer__nav-item">
+                        <a href="" class="footer__nav-link"> шкафы и комоды</a>
+                    </li>
+                    <li class="footer__nav-item">
+                        <a href="" class="footer__nav-link">мебель для кухни</a>
+                    </li>
+                    <li class="footer__nav-item">
+                        <a href="" class="footer__nav-link">товары для дома</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+
+        <div class="footer__wrap-copyright copyright-block">
+            <div class="copyright-block__copyright copyright">
+                <span class="copyright__text">
+                    © Все права защищены, 2019
+                </span>
+            </div>
+            <div class="copyright-block__support support">
+                <div class="support__wrap">
+                    <svg class="support__icon" xmlns="http://www.w3.org/2000/svg" width="13" height="13">
+                        <path fill-rule="evenodd" fill="#A1A8BD" d="M.722 0C.289 0 0 .289 0 .722 0 7.511 5.489 13 12.278 13c.433 0 .722-.289.722-.723V9.75c0-.434-.289-.722-.722-.722-.867 0-1.806-.145-2.601-.434-.288-.072-.505 0-.722.217L7.367 10.4C5.344 9.388 3.683 7.655 2.6 5.633l1.589-1.589c.216-.216.289-.506.216-.722-.289-.867-.433-1.733-.433-2.6C3.972.289 3.683 0 3.25 0"/>
+                    </svg>
+                    <span class="support__text">
+                        Техническая поддержка
+                    </span>
+                    
+                </div>
+                <a href="tel: +74996539900" class="support__tel">
+                    +7 (499) 653-9-900
+                </a>
+            </div>
+            <div class="copyright-block__order-status order-status">
+                <a href="#" class="order-status__link">
+                        Проверить статус заказа
+                      <svg class="order-status__icon" xmlns="http://www.w3.org/2000/svg" width="5" height="7" fill-rule="evenodd" fill="#9ca2b7">
+                        <path d="M5.015 3.445L1.784.447 1.306.002.708.447l-.718.777 2.393 2.221L-.01 5.777l.718.667.598.555.478-.555 3.231-2.999z"/>
+                    </svg> 
+                </a>
+            </div>
+            <div class="copyright-block__login login">
+                
+                    <svg class="login__icon" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" fill="#A1A8BD" width="12" height="12">
+                        <path  d="M0 12v-.75c0-2.625 2.475-4.5 6-4.5s6 1.875 6 4.5V12H0zm6-6C4.35 6 3 4.65 3 3s1.35-3 3-3 3 1.35 3 3-1.35 3-3 3z"/>
+                    </svg>
+                    <a href="#" class="login__button-text">
+                        Войти в систему       
+                    </a>
+            </div>  
+        </div>
+    </footer>
 </body>
 
 </html>
