--- a/html/index.html
+++ b/html/index.html
@@ -270,6 +270,90 @@
 
         </div> 
         <div class="main-content__next-pages next-pages">
+            <div class="next-pages__to-the-begining arrow">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="6" height="10">
+                        <defs>
+                            <path id="a" d="M379.702 2292.858l-3.168 3.157 3.168 3.158a1.079 1.079 0 0 1 0 1.53 1.088 1.088 0 0 1-1.534 0l-3.835-3.824a1.076 1.076 0 0 1-.313-.864 1.077 1.077 0 0 1 .313-.864l3.835-3.823a1.087 1.087 0 0 1 1.534 0 1.079 1.079 0 0 1 0 1.53z"/>
+                        </defs>
+                        <use fill="#3a405b" xlink:href="#a" transform="translate(-374 -2291)"/>
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="6" height="10">
+                        <defs>
+                            <path id="a" d="M379.702 2292.858l-3.168 3.157 3.168 3.158a1.079 1.079 0 0 1 0 1.53 1.088 1.088 0 0 1-1.534 0l-3.835-3.824a1.076 1.076 0 0 1-.313-.864 1.077 1.077 0 0 1 .313-.864l3.835-3.823a1.087 1.087 0 0 1 1.534 0 1.079 1.079 0 0 1 0 1.53z"/>
+                        </defs>
+                        <use fill="#3a405b" xlink:href="#a" transform="translate(-374 -2291)"/>
+                    </svg>
+            </div>
+            <div class="next-pages__back arrow">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="6" height="10">
+                        <defs>
+                            <path id="a" d="M379.702 2292.858l-3.168 3.157 3.168 3.158a1.079 1.079 0 0 1 0 1.53 1.088 1.088 0 0 1-1.534 0l-3.835-3.824a1.076 1.076 0 0 1-.313-.864 1.077 1.077 0 0 1 .313-.864l3.835-3.823a1.087 1.087 0 0 1 1.534 0 1.079 1.079 0 0 1 0 1.53z"/>
+                        </defs>
+                        <use fill="#3a405b" xlink:href="#a" transform="translate(-374 -2291)"/>
+                    </svg>
+            </div>
+            <div class="next-pages__page-number ">
+                <span class="next-pages__number ">
+                1
+                </span>
+            </div>
+            <div class="next-pages__page-number">
+                <span class="next-pages__number">
+                2
+                </span>
+            </div>
+            <div class="next-pages__page-number">
+                <span class="next-pages__number">
+                3
+                </span>
+            </div>
+            <div class="next-pages__page-number next-pages--active">
+                <span class="next-pages__number">
+                4
+                </span>
+            </div>
+            <div class="next-pages__page-number">
+                <span class="next-pages__number">
+                5
+                </span>
+            </div>
+            <div class="next-pages__page-number">
+                <span class="next-pages__number">
+                6
+                </span>
+            </div>
+            <div class="next-pages__page-number">
+                <span class="next-pages__number">
+                7
+                </span>
+            </div>
+            <div class="next-pages__page-number">
+                <span class="next-pages__number">
+                8
+                </span>
+            </div>
+            <div class="next-pages__forward arrow">
+                    <svg class="arrow__modif" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="6" height="10">
+                        <defs>
+                            <path id="a" d="M379.702 2292.858l-3.168 3.157 3.168 3.158a1.079 1.079 0 0 1 0 1.53 1.088 1.088 0 0 1-1.534 0l-3.835-3.824a1.076 1.076 0 0 1-.313-.864 1.077 1.077 0 0 1 .313-.864l3.835-3.823a1.087 1.087 0 0 1 1.534 0 1.079 1.079 0 0 1 0 1.53z"/>
+                        </defs>
+                        <use fill="#3a405b" xlink:href="#a" transform="translate(-374 -2291)"/>
+                    </svg>
+            </div>
+            <div class="next-pages__in-end arrow">
+                    <svg class="arrow__modif" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="6" height="10">
+                        <defs>
+                            <path id="a" d="M379.702 2292.858l-3.168 3.157 3.168 3.158a1.079 1.079 0 0 1 0 1.53 1.088 1.088 0 0 1-1.534 0l-3.835-3.824a1.076 1.076 0 0 1-.313-.864 1.077 1.077 0 0 1 .313-.864l3.835-3.823a1.087 1.087 0 0 1 1.534 0 1.079 1.079 0 0 1 0 1.53z"/>
+                        </defs>
+                        <use fill="#3a405b" xlink:href="#a" transform="translate(-374 -2291)"/>
+                    </svg>
+                    <svg class="arrow__modif" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="6" height="10">
+                        <defs>
+                            <path id="a" d="M379.702 2292.858l-3.168 3.157 3.168 3.158a1.079 1.079 0 0 1 0 1.53 1.088 1.088 0 0 1-1.534 0l-3.835-3.824a1.076 1.076 0 0 1-.313-.864 1.077 1.077 0 0 1 .313-.864l3.835-3.823a1.087 1.087 0 0 1 1.534 0 1.079 1.079 0 0 1 0 1.53z"/>
+                        </defs>
+                        <use fill="#3a405b" xlink:href="#a" transform="translate(-374 -2291)"/>
+                    </svg>
+            </div>
 
         </div>
 
@@ -323,9 +407,9 @@
                 </a>
             </div>
             <div class="copyright-block__order-status order-status">
-                <a href="#" class="order-status__link order-status--hover">
+                <a href="#" class="order-status__link">
                         Проверить статус заказа
-                      <svg class="order-status__icon order-status--hover" xmlns="http://www.w3.org/2000/svg" width="5" height="7" fill-rule="evenodd" fill="#9ca2b7">
+                    <svg class="order-status__icon" xmlns="http://www.w3.org/2000/svg" width="5" height="7" fill-rule="evenodd" fill="#9ca2b7">
                         <path d="M5.015 3.445L1.784.447 1.306.002.708.447l-.718.777 2.393 2.221L-.01 5.777l.718.667.598.555.478-.555 3.231-2.999z"/>
                     </svg> 
                 </a>
