--- a/html/index.html
+++ b/html/index.html
@@ -31,11 +31,6 @@
             </svg> 
         </a>
 
-       <!--<a href="http://gmail@gmail.com" class="contact">
-            <svg class="contact_img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" version="1.0" fit="" height="100%" width="100%" preserveAspectRatio="xMidYMid meet" style="pointer-events: none; display: inline-block;"><path d="M1.574 5.286l7.5 4.03c.252.134.578.198.906.198.328 0 .654-.064.906-.2l7.5-4.028c.49-.263.95-1.286.054-1.286H1.52c-.896 0-.434 1.023.054 1.286zm17.04 2.203c-.556.288-7.388 3.848-7.728 4.026s-.578.2-.906.2-.566-.022-.906-.2-7.133-3.74-7.688-4.028c-.39-.204-.386.035-.386.22V15c0 .42.566 1 1 1h16c.434 0 1-.58 1-1V7.708s.004-.423-.387-.22z"></path></svg>
-            <span class="contact_txt">work.of.future@gmail.com</span>
-        </a>--> 
-
         <a href="#" class="shopping-cart ">
             <svg class="shopping-cart__icon" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" fill="#A1A8BD" width="18" height="17">
                 <path d="M18 4.052L17 7.04c-.37.838-.895 1.992-2 1.992H5.36l.118.996H18l-1 1.991H4.352l-.644.075L2.522 2.061H.999A.997.997 0 0 1 0 1.066C0 .515.352.008.904.008l3.387-.014.254 2.15A1.2 1.2 0 0 1 5 2.061h12c1.105 0 1 .891 1 1.991zM6 13.015c1.105 0 2 .891 2 1.992a1.996 1.996 0 0 1-2 1.991c-1.105 0-2-.892-2-1.991 0-1.101.895-1.992 2-1.992zm8 0c1.105 0 2 .891 2 1.992a1.996 1.996 0 0 1-2 1.991c-1.105 0-2-.892-2-1.991 0-1.101.895-1.992 2-1.992z"/>
@@ -78,7 +73,7 @@
         <form class="search-form">
           <input type="text" placeholder="Поиск по товарам" class="search-form__input">
           <button class="button search-form__button">  
-              <svg class="button__serch-icon search-form__input--focus" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" fill="#343E5C" width="13" height="13">
+              <svg class="button__serch-icon" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" fill="#343E5C" width="13" height="13">
                   <path  d="M12.614 12.61c-.501.5-1.313.5-1.813 0L8.158 9.966c-2.071 1.256-4.799 1.005-6.587-.784a5.383 5.383 0 0 1 0-7.614 5.381 5.381 0 0 1 7.614 0c1.788 1.789 2.04 4.516.786 6.586l2.643 2.645c.5.498.5 1.309 0 1.811zM7.735 3.017a3.335 3.335 0 0 0-4.714 0 3.335 3.335 0 0 0 0 4.714 3.331 3.331 0 0 0 4.714 0 3.335 3.335 0 0 0 0-4.714z"/>
               </svg>    
           </button>
