Сверстан элемент path на странице карточка, пока без адаптива

--- a/html/index.html
+++ b/html/index.html
@@ -137,7 +137,7 @@
         </div>
         <div class="main-content__goods goods">
             <div class="goods__card card">
-                    <a href="#" class="goods__link">
+                    <a href="card.html" class="goods__link">
                         <img class="goods__img" src="../img/chairСatalog/1.png" alt="стул ханна">
                      </a> 
                     <span class="card__name">Стул Ханна</span>
