Сверстан элемент slider, пока без адаптива

--- a/html/card.html
+++ b/html/card.html
@@ -101,6 +101,36 @@
                 Кресло Ханна
             </a>
         </div>
+
+        <div class="main-content__about-card about-card">
+            <div class="about-card__slider slider">
+                <svg class="slider__icon-arrow icon-arrow icon-arrow--up" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="12" height="8">
+                    <defs>
+                        <path id="a" d="M199.386 583.71l-5.177-6.069a1.115 1.115 0 0 1 0-1.398c.33-.385.863-.385 1.192 0l4.58 5.37 4.58-5.37c.33-.385.864-.385 1.193 0a1.11 1.11 0 0 1 0 1.398l-5.177 6.07a.78.78 0 0 1-.595.289.779.779 0 0 1-.596-.29z"/>
+                    </defs>
+                    <use fill="#828aa2" xlink:href="#a" transform="translate(-194 -576)"/>
+                </svg>
+                <div class="slider__img-wrap img-wrap img-wrap--active">
+                    <img class="img-item" src="../img/сardProduct/preview1.png" alt="слайд 1">
+                </div>
+                <div class="slider__img-wrap img-wrap">
+                    <img class="img-item" src="../img/сardProduct/preview2.png" alt="слайд 2">
+                </div>
+                <div class="slider__img-wrap img-wrap">
+                    <img class="img-item" src="../img/сardProduct/preview3.png" alt="слайд 3">
+                </div>
+                <div class="slider__img-wrap img-wrap">
+                    <img class="img-item" src="../img/сardProduct/preview4.png" alt="слайд 4">
+                </div>
+                <svg class="slider__icon-arrow icon-arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="12" height="8">
+                    <defs>
+                        <path id="a" d="M199.386 583.71l-5.177-6.069a1.115 1.115 0 0 1 0-1.398c.33-.385.863-.385 1.192 0l4.58 5.37 4.58-5.37c.33-.385.864-.385 1.193 0a1.11 1.11 0 0 1 0 1.398l-5.177 6.07a.78.78 0 0 1-.595.289.779.779 0 0 1-.596-.29z"/>
+                    </defs>
+                    <use fill="#828aa2" xlink:href="#a" transform="translate(-194 -576)"/>
+                </svg>
+            </div>
+            <div class="about-card__card card-item"></div>
+        </div>
     </main>
     
     <footer class="footer">
