--- a/html/index.html
+++ b/html/index.html
@@ -32,7 +32,7 @@
                     </svg> 
                 </a>
         
-                <a href="#" class="shopping-cart ">
+                <a href="shoppingCart.html" class="shopping-cart ">
                     <svg class="shopping-cart__icon" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" fill="#A1A8BD" width="18" height="17">
                         <path d="M18 4.052L17 7.04c-.37.838-.895 1.992-2 1.992H5.36l.118.996H18l-1 1.991H4.352l-.644.075L2.522 2.061H.999A.997.997 0 0 1 0 1.066C0 .515.352.008.904.008l3.387-.014.254 2.15A1.2 1.2 0 0 1 5 2.061h12c1.105 0 1 .891 1 1.991zM6 13.015c1.105 0 2 .891 2 1.992a1.996 1.996 0 0 1-2 1.991c-1.105 0-2-.892-2-1.991 0-1.101.895-1.992 2-1.992zm8 0c1.105 0 2 .891 2 1.992a1.996 1.996 0 0 1-2 1.991c-1.105 0-2-.892-2-1.991 0-1.101.895-1.992 2-1.992z"/>
                     </svg>
