cверстана страница с формой проверки статуса заказа

--- a/html/shoppingCart.html
+++ b/html/shoppingCart.html
@@ -23,7 +23,7 @@
                         +7(499)653-9-900
                     </a>
                 </div>
-                <a href="#" class="check-order-status">
+                <a href="checkOrderSatus.html" class="check-order-status">
                     <span class="check-order-status__text">
                         Проверить статус заказа
                     </span>
@@ -253,7 +253,7 @@
                 </a>
             </div>
             <div class="copyright-block__order-status order-status">
-                <a href="#" class="order-status__link">
+                <a href="checkOrderSatus.html" class="order-status__link">
                         Проверить статус заказа
                     <svg class="order-status__icon" xmlns="http://www.w3.org/2000/svg" width="5" height="7" fill-rule="evenodd" fill="#9ca2b7">
                         <path d="M5.015 3.445L1.784.447 1.306.002.708.447l-.718.777 2.393 2.221L-.01 5.777l.718.667.598.555.478-.555 3.231-2.999z"/>
